Solved exercises from 3rd class, Aug 4th 2021