@@ -3,6 +3,7 @@ package com.redbee.academy.clase3;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class DolarTests {
@@ -10,9 +11,9 @@ public class DolarTests {
     @Test
     void testDolar() {
         Assertions.assertEquals(
-                3.34F,
+                3.33,
                 Dolar.resolver(
-                        List.of(
+                        Arrays.asList(
                                 496.96F,
                                 499.03F,
                                 496.03F,
